--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,10 +35,10 @@ jobs:
             IdentityFile ~/.ssh/deploy_key
             StrictHostKeyChecking no
           END
-
           export VERSION="$(cat _build/prod/rel/${APP_NAME}/releases/start_erl.data | awk '{print $2}')"
           export SOURCE="_build/prod/rel/${APP_NAME}/releases/${VERSION}/${APP_NAME}.tar.gz"
-          export TARGET="/tmp/${APP_NAME}-${VERSION}.tar.gz"
+          export SHA=$(git rev-parse --short HEAD)
+          export TARGET="/tmp/${APP_NAME}-${SHA}.tar.gz"
           rsync -chav --delete $SOURCE production:$TARGET
           ssh production "mkdir -p ~/releases"
           ssh production "tar xvf  $TARGET --one-top-level -C ~/releases"
