--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,12 +41,12 @@ jobs:
           export SHA=$(git rev-parse --short HEAD)
           export TARGET="/tmp/${APP_NAME}-${SHA}.tar.gz"
           rsync -chav --delete $SOURCE production:$TARGET
-
           ssh production "bash -s" <<EOF
             mkdir -p ~/releases
             tar xvf  $TARGET --one-top-level -C ~/releases
-            ln -s app ~/releases/${APP_NAME}-${SHA}
-            app/bin/app start
+            rm -rf ./app
+            ln -s /root/releases/${APP_NAME}-${SHA} app
+            systemctl restart deploy-phoenix
           EOF
         env:
           SSH_USER: ${{ secrets.PRODUCTION_USERNAME }}
