--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,13 @@
 name: CI
-
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,8 +34,7 @@ jobs:
       - name: Compile and release
         run: |
             mix compile
-            mix distillery.release
-
+            mix distillery.release --upgrade
 
       - name: Deploy
         run: |
