--- a/.github/workflows/ci-hotcode.yaml
+++ b/.github/workflows/ci-hotcode.yaml
@@ -45,11 +45,7 @@ jobs:
         run: |
           export VERSION="$(cat _build/prod/rel/${APP_NAME}/releases/start_erl.data | awk '{print $2}')"
           export SOURCE="_build/prod/rel/${APP_NAME}/releases/${VERSION}/${APP_NAME}.tar.gz"
-          export TARGET="/tmp/${APP_NAME}.tar.gz"
-          rsync -chav --delete $SOURCE production:$TARGET
-
-          ssh production "bash -s" <<EOF
-            mkdir -p ${APP_NAME}/releases/${VERSION}
-            cp -r $TARGET ${APP_NAME}/releases/${VERSION}/${APP_NAME}.tar.gz
-            ./${APP_NAME}/bin/${APP_NAME} upgrade ${VERSION}
-          EOF
+          export TARGET="${APP_NAME}/releases/${VERSION}/${APP_NAME}.tar.gz"
+          ssh production "mkdir -p ${APP_NAME}/releases/${VERSION}"
+          rsync -caz --delete $SOURCE production:$TARGET
+          ssh production "./${APP_NAME}/bin/${APP_NAME} upgrade ${VERSION}"
