--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,11 @@
-name: Normal deployement
+name: CI
+
 on:
-  workflow_dispatch:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +29,7 @@ jobs:
           mix compile
           mix distillery.release
 
-      - name: SSH config
+      - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/deploy_key
@@ -41,16 +46,16 @@ jobs:
           SSH_USER: ${{ secrets.PRODUCTION_USERNAME }}
           SSH_KEY: ${{ secrets.PRODUCTION_KEY }}
 
-      - name: Deploy
+      - name: Deploy to production
         run: |
           export VERSION="$(cat _build/prod/rel/${APP_NAME}/releases/start_erl.data | awk '{print $2}')"
           export SOURCE="_build/prod/rel/${APP_NAME}/releases/${VERSION}/${APP_NAME}.tar.gz"
           export TARGET="/tmp/${APP_NAME}.tar.gz"
-          rsync -chav --delete $SOURCE production:$TARGET
+          rsync -cha --delete $SOURCE production:$TARGET
 
           ssh production "bash -s" <<EOF
             systemctl stop deploy-phoenix
             rm -rf app
-            tar xvf  $TARGET --one-top-level -C .
+            tar xf  $TARGET --one-top-level -C .
             systemctl start deploy-phoenix
           EOF
