--- a/.github/workflows/ci-normal.yml
+++ b/.github/workflows/ci-normal.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow that is manually triggered
-
-name: Manual workflow
+name: Normal deployement
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
